--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-phone-list-container>
-</app-phone-list-container>
+<div class="vertical-fill">
+  <app-phone-list-container>
+  </app-phone-list-container>
+</div>
