--- a/client/src/app/components/phone-list-container/phone-list-container.component.html
+++ b/client/src/app/components/phone-list-container/phone-list-container.component.html
@@ -1,6 +1,5 @@
-<p>
-  phone-list-container works!
-</p>
-<ul *ngFor="let phone of phones">
-  <li>{{phone.name}}</li>
-</ul>
+<div class="flex phonelist__container">
+  <div class="phone__container" *ngFor="let phone of phones">
+    <app-phone-detail-component [phone]="phone"></app-phone-detail-component>
+  </div>
+</div>
