--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+.flex {
+  display: flex;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: column;
+}
+
+.vertical-fill {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: row;
+}
+
+.none {
+  flex: none;
+}
+
+.one {
+  flex: 1;
+}
