Add Sass, Layout, images, eslint and re-styled components

--- a/client/src/app/components/phone-detail-component/phone-detail-component.component.html
+++ b/client/src/app/components/phone-detail-component/phone-detail-component.component.html
@@ -1,5 +1,5 @@
 <div class="vertical phone__content">
-  <div>
+  <div class="phone__img__container">
     <img [src]="phone.image" class="phone__img" alt="{{phone.brand}}-image">
   </div>
   <div>
