--- a/client/src/app/styles/layout.scss
+++ b/client/src/app/styles/layout.scss
@@ -1,8 +1,16 @@
+@import '~poly-fluid-sizing';
+
+html {
+  @include poly-fluid-sizing('font-size', (320px:16px, 768px: 18px, 992px:20px));
+}
+
 html, body {
   padding: 0;
   margin: 0;
   height: 100%;
+  width: 100%;
 }
+
 .flex {
   display: flex;
 }
