Add spinner, state, effects and reducer

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div class="vertical-fill">
-  <app-phone-list-container>
-  </app-phone-list-container>
+  <app-phone-list-container [phoneState]="phoneState"> </app-phone-list-container>
 </div>
