--- a/client/src/app/components/phone-list-container/phone-list-container.component.html
+++ b/client/src/app/components/phone-list-container/phone-list-container.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="checkStatus()" class="spinner__container">
   <div class="spinner"></div>
   <div class="spinner__text" *ngIf="checkPending()">Obteniendo datos del servidor...</div>
-  <div class="spinner__text" *ngIf="error">Ha ocurrido un error, recarge la página por favor</div>
+  <div class="spinner__text" *ngIf="error">Ha ocurrido un error, por faavor, recarge la página.</div>
 </div>
 <div *ngIf="phones" class="flex phonelist__container">
   <div class="phone__container" *ngFor="let phone of phones">
