--- a/client/src/app/styles/spinner.scss
+++ b/client/src/app/styles/spinner.scss
@@ -12,6 +12,7 @@ $third-color: #000;
   width: 100%;
   align-items: center;
   justify-content: center;
+  padding: rem(30px);
 }
 
 .spinner {
@@ -54,4 +55,5 @@ $third-color: #000;
   font-size: rem(24px);
   font-family: Arial, Helvetica, sans-serif;
   color: $second-color;
+  text-align: center;
 }
