Feat: spinner re-styled

--- a/client/src/app/styles/spinner.scss
+++ b/client/src/app/styles/spinner.scss
@@ -13,6 +13,7 @@ $third-color: #000;
   align-items: center;
   justify-content: center;
   padding: rem(30px);
+  box-sizing: border-box;
 }
 
 .spinner {
