--- a/client/src/app/components/phone-detail-component/phone-detail-component.component.html
+++ b/client/src/app/components/phone-detail-component/phone-detail-component.component.html
@@ -10,16 +10,16 @@
   </div>
   <ul class="phone__feature__list">
     <li>
-      <span class="phone__feature">Price </span>{{phone.price}}
+      <span class="phone__feature">Price: </span>{{phone.price}}
+    </li> 
+    <li>
+      <span class="phone__feature">Color: </span>{{phone.color}}
     </li>
     <li>
-      <span class="phone__feature">Color </span>{{phone.color}}
+      <span class="phone__feature">Screen: </span>{{phone.screen}}
     </li>
     <li>
-      <span class="phone__feature">Screen </span>{{phone.screen}}
-    </li>
-    <li>
-      <span class="phone__feature">Battery </span>{{phone.battery}}
+      <span class="phone__feature">Battery: </span>{{phone.battery}}
     </li>
   </ul>
 
